# 4.0inch_ESP32_Rust_NamazVakti

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cfg.toml.example  sdkconfig.defaults
.cargo/: config.toml
.githooks/: pre-commit
.github/: CODEOWNERS  WORKFLOWS.md
.github/issue_template/: bug_report.md
.github/workflows/: esp32-build.yml  release.yml  rust.yml  security-audit.yml  stale.yml  zizmor.yml
logic/: Cargo.toml
logic/src/: arabic.rs  language.rs  lib.rs  location.rs  prayer_times.rs  time_utils.rs  touch_calibration.rs  wifi_credentials.rs  zone.rs
src/: about.rs  cache.rs  framebuf.rs  keyboard.rs  location.rs  location_setup.rs  main.rs  prayer.rs  rgb_led.rs  segdisplay.rs  settings.rs  settings_screen.rs  text.rs  time_utils.rs  touch.rs  touch_calibration.rs  wifi_credentials.rs  wifi_setup.rs
