[package]
name = "namaz-vakti-logic"
version = "0.7.0"
edition = "2021"
description = "Pure, hardware-free calendar/prayer-time logic for namaz-vakti, kept separate so it can be unit tested with a normal host Rust toolchain (no ESP-IDF/ESP32 toolchain or device required)."

# Marks this as its own workspace root so it gets its own Cargo.lock and is
# never pulled into the parent ESP32 firmware crate's (implicit) workspace,
# even though the firmware depends on it via a path dependency.
[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
# Used by `location.rs` to parse the Ezan Vakti list endpoints; also drives the
# serde_json-backed tests in this crate. A regular (not dev-only) dependency
# because `location::parse_entries` exposes `serde_json::Error` in its public
# signature.
serde_json = "1"
